<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.danwatling.apkdecompiler</groupId>
	<artifactId>ApkDecompiler</artifactId>
	<version>TRUNK-SNAPSHOT</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>apkdecompiler</id>
			<url>file://${project.basedir}/repo</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<resources>
						<resource>
							<directory>${project.basedir}/src/main/resources</directory>
						</resource>
					</resources>
					<outputDirectory>${project.build.directory}</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<id>create-my-bundle</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<archive>
								<manifest>
									<mainClass>com.danwatling.apkdecompiler.Main</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>1.3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>brut</groupId>
			<artifactId>apktool</artifactId>
			<version>2.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.dex2jar</groupId>
			<artifactId>tools</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.dex2jar</groupId>
			<artifactId>base-cmd</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.dex2jar</groupId>
			<artifactId>translator</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.dex2jar</groupId>
			<artifactId>reader</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.dex2jar</groupId>
			<artifactId>reader-api</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.dex2jar</groupId>
			<artifactId>ir</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.bitbucket.mstrobel</groupId>
			<artifactId>procyon-compilertools</artifactId>
			<version>0.5.32</version>
		</dependency>

		<!-- Used by dex2jar -->
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr-runtime</artifactId>
			<version>3.5</version>
		</dependency>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm-debug-all</artifactId>
			<version>4.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.android.tools</groupId>
			<artifactId>dx</artifactId>
			<version>1.7</version>
		</dependency>
	</dependencies>
</project>
